<resources>
    <string name="app_name" translatable="false">Quiz Maker</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title">Quiz Maker</string>
    <string name="nav_header_subtitle">You are not authorized</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_all_tests">All Tests</string>
    <string name="menu_your_tests">Your Tests</string>
    <string name="menu_your_results">Your Results</string>
    <string name="menu_create_new_test">Create New Test</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_rate_us">Rate Us</string>
    <string name="play">Play!</string>
    <string name="perceptive_title">How perceptive are you?</string>
    <string name="perceptive_body">Check how much you understand someone</string>

    <!--Perceptive Test-->
    <string name="question_one">1. Do you think that to get to know a person better, you need to:</string>
    <string name="answer_one">A. Watch him do his job.</string>
    <string name="answer_two">B. To be with him in a stressful situation.</string>
    <string name="answer_three">C. Drink with him, and then he will "open" in all its glory.</string>
    <string name="title">Title</string>
    <string name="description">Short description</string>
    <string name="next">Next</string>
    <string name="question">Question</string>
    <string name="add_question">Add question</string>
    <string name="previous">Previous</string>
    <string name="your_question">Your question</string>
    <string name="answer_choice">Answer choice</string>
    <string name="save_test">Save test</string>
    <string name="add_results">Add results</string>
    <string name="result_for_the_sum_of_points">Result for the sum of points:</string>
    <string name="to">to</string>
    <string name="from">from</string>
    <string name="show_results">Show results</string>
    <string name="results">Results:</string>
    <string name="menu_show_result_fragment">Result</string>
    <string name="restart">Restart</string>
    <string name="save_result">Save Result</string>
    <string name="share_friends">Share friends</string>
    <string name="system">System</string>
    <string name="share_about_us">Share about us</string>
    <string name="last_play">Last play:</string>
    <string name="create_test">Create test:</string>

    <string name="title_dialog">Delete test?</string>
    <string name="supporting_text_dialog">Are you sure, that you want to delete this test from your phone?</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="you_scored">"You scored"</string>
    <string name="out_of">"out of"</string>
    <string name="points">"points"</string>
    <string name="input_question_text_snackbar">Some fields were not filled in (at least two answers to one question)</string>
    <string name="empty_question">Empty question</string>
    <string name="ok">OK</string>
    <string name="input_question">Input Question</string>
    <string name="max_length">Max length</string>
    <string name="input_title">Input Title</string>
    <string name="input_description">Input Description</string>
    <string name="your_score_is_limited_maxScore">Your score is limited maxScore</string>
    <string name="save">Save</string>
    <string name="empty_title">Empty Title</string>
    <string name="empty_description">Empty Description</string>
    <string name="min_score_more_then_max">May be max score should be more then min score?</string>
    <string name="input_score">You try save test with empty score. Input score or delete results</string>
    <string name="sure_without_results">Are you sure, that you save your test without custom results?</string>
    <string name="delete_form_result">Delete results?</string>
    <string name="start">Start</string>

    <string name="href_on_App" translatable="false">ref on app in Google market</string>
    <string name="i_scored">I scored</string>
    <string name="in_string">in</string>
    <string name="the">the</string>
    <string name="test">test</string>
    <string name="how_much_will_you_gain">How much will you gain?</string>
    <string name="search_title" translatable="false">searchTitle</string>
    <string name="log_out">Log out</string>
    <string name="log_in">Log in</string>
    <string name="login_dialog_message">In order to solve other users tests and share your own, you need to log in</string>
    <string name="login_dialog_title">Log in to your account?</string>
    <string name="logout_dialog_message">All your tests will be saved. You will be able to access them after logging in.</string>
    <string name="logout_dialog_title">Log out of your account?</string>
    <string name="more_detailed">More detailed</string>

    <string name="shareAboutUsText">Check out the new test creation app! I already downloaded it, and you?</string>
    <string name="test_was_deleted_previously">Oops… it seems this test has been deleted</string>
    <string name="helptitle">helpTitle</string>
    <string name="welcome">Welcome,\u00A0</string>
    <string name="sign_in">Log in via Google or email</string>
    <string name="anonymous_text">Log in with an anonymous account</string>

    <string name="anonymous"> Anonymous</string>
    <string name="internet_unavailable">The Internet is not available. Check the connection</string>
    <string name="help_dialog_title">Help dialog</string>
    <string name="help_dialog_delete_question_text">Delete the last question</string>
    <string name="help_dialog_add_question_text">Add a question to the end</string>
    <string name="help_dialog_next_text">Go to the next step</string>
    <string name="help_dialog_delete_result_text">Delete the last result</string>
    <string name="help_dialog_add_result_text">Add a result to the end</string>
    <string name="help_dialog_save_text">Save test</string>
    <string name="logInOfflineTitleText">Log in to offline mode</string>
    <string name="logInOfflineMessage">You can go offline, but then you won\'t be able to solve other people\'s tests, share your tests</string>
    <string name="cloud_save_title">Share the test with other users?</string>
    <string name="cloud_save_message">This will enable other people to take your test. It is because of this that you also solve other people\'s tests =)</string>
    <string name="you_are_not_logged_in">You are not logged in</string>
    <string name="offline_mode">Log in to offline mode</string>
    <string name="test_with_choice_answer">Test with a choice of answer</string>
    <string name="test_with_set_custom_score">Test with set custom score</string>
    <string name="select_the_test_type">Select the test type</string>
    <string name="choose_correct_answer">Choose correct answer</string>
</resources>