<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/textFieldMargin"
        android:text="@string/result_for_the_sum_of_points"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldFrom"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/textFieldMargin"
        android:hint="@string/from"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/from">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textEditTextFrom"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:inputType="number"
            android:maxLength="4" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldTo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/textFieldMargin"
        android:hint="@string/to"
        app:layout_constraintStart_toEndOf="@id/textFieldFrom"
        app:layout_constraintTop_toBottomOf="@id/from">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textEditTextTo"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:inputType="number"
            android:maxLength="4" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldTitle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/textFieldMargin"
        android:hint="@string/title"
        app:counterEnabled="true"
        app:counterMaxLength="100"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textFieldFrom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="101" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldDescription"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/textFieldMargin"
        android:hint="@string/description"
        app:counterEnabled="true"
        app:counterMaxLength="700"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="701" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/textFieldDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>