<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldTitle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/textFieldMargin"
        android:hint="@string/title"
        app:counterEnabled="true"
        app:counterMaxLength="100"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="101" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/textFieldDescription"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/textFieldMargin"
        android:hint="@string/description"
        app:counterEnabled="true"
        app:counterMaxLength="120"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="121" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_arrow_right_alt_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldDescription">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/choice_answer_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:paddingStart="@dimen/fab_margin"
            android:text="@string/test_with_choice_answer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textFieldDescription" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/set_score_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:paddingStart="@dimen/fab_margin"
            android:text="@string/test_with_set_custom_score"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choice_answer_radio_btn" />

    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>